--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "@astrojs/sitemap": "^3.6.0",
-    "@fontsource-variable/dm-sans": "^5.2.8",
-    "@fontsource-variable/montserrat": "^5.2.8",
+    "@fontsource-variable/plus-jakarta-sans": "^5.2.8",
     "@tailwindcss/vite": "^4.1.17",
     "astro": "^5.15.4",
+    "astro-compress": "^2.3.8",
     "tailwindcss": "^4.1.17"
   }
 }
